# ChatPatrimoineAcadien

./: .dockerignore  Dockerfile  README.md  app.py  items_with_short_descriptions.json  pyproject.toml  requirements.txt  sidebar_answers.py  updating.md
.github/: README.md
.github/workflows/: deploy.yml
