[project]
name = "patrimoineimages"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain==0.3.23",
    "langchain-cohere==0.4.3",
    "langchain-google-genai==2.1.2",
    "langchain-openai==0.3.12",
    "langchain-pinecone==0.2.4",
    "langchain-voyageai==0.1.4",
    "langgraph==0.3.25",
    "streamlit==1.44.1",
]
