[project]
name = "patrimoineimages"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain",
    "langchain-cohere",
    "langchain-google-genai",
    "langchain-openai",
    "langchain-pinecone",
    "langchain-voyageai",
    "langgraph",
    "python-dotenv",
    "streamlit",
]
